Modified with help from BLACKBOX AI
Next mission; fibonacci

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     </form>
     <div id="fizzbuzz-result"></div>
 
-    <script src="fakultet.js"></script>
-    <script src="fizzbuzz.js"></script>
-    <script src="main.js"></script>
+    <script type="module" src="fakultet.js"></script>
+    <script type="module" src="fizzbuzz.js"></script>
+    <script type="module" src="main.js"></script>
+
 </body>
 </html>
